refactor(authorization): 更新角色权限关联服务中的流收集方法
- 替换了 stream().toList() 为 stream().collect(Collectors.toList())
- 确保了 Java 版本兼容性的一致性
- 提高了代码的明确性和可读性